--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "swiper": "^9.4.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "eslint": "^8.36.0",
     "eslint-plugin-react": "^7.32.2",
     "tailwindcss": "^3.2.7"
